removed mui and adde tailwind

--- a/src/App.css
+++ b/src/App.css
@@ -1,149 +1,10 @@
-.header {
-  padding-top: 2rem;
-}
+body{
 
+  font-family:Arial, Helvetica, sans-serif;
 
-.App {
-  background-color: rgb(218, 238, 253);
-  padding: 2rem;
-  background-image: url(./weather.jpg);
-  background-repeat: no-repeat;
+  background: url(./weather.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: center;
-
-}
-
-.searchbar-container {
-  display: grid;
-  flex-direction: column;
-}
-
-.searchbar {
-  padding: 1rem;
-  text-align: center;
-}
-
-.form-control {
-  max-width: 35rem;
-
-}
-
-.btn-padding {
-  padding: 0.4rem;
-  text-align: center;
-}
-
-.location-name {
-  padding-top: 2rem;
-  color: black;
-  font-size: clamp(1rem, 5vh, 4rem);
-  text-align: center;
-  text-decoration: underline;
-  text-decoration: underline overline;
-}
-
-.date-container {
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border: 1px black;
-  background-color: aliceblue;
-}
-
-
-
-.date-padding1 {
-  flex: 1;
-  font-size: clamp(0.5rem, 2vh, 4rem);
-  text-decoration: underline;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-}
-
-.date-padding2 {
-  flex: 1;
-  font-size: clamp(0.5rem, 2vh, 4rem);
-  text-decoration: underline;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.date-padding3 {
-  flex: 1;
-  font-size: clamp(0.5rem, 2vh, 4rem);
-  text-decoration: underline;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.weather-description {
-  padding-top: 2rem;
-}
-
-.temp-size {
-  text-align: center;
-  font-size: clamp(1rem, 4.5vh, 4rem);
-  font-weight: 500;
-  color: rgb(56, 56, 56);
-  border: 1px solid rgb(200, 200, 200) !important;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-.description-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.weather-desc {
-  font-size: clamp(0.5rem, 3.4vh, 1.7rem);
-  font-style: italic;
-}
-
-.weather-icon {
-  padding-bottom: 0.5rem;
-}
-
-.wind-conatiner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.windspeed {
-  font-size: clamp(0.5rem, 3vh, 1.7rem);
-}
-
-.sun-container {
-  padding-top: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.sun {
-  justify-content: center;
-
-}
-
-.sun-img {
-  width: 8rem;
-}
-
-.sun-font {
-  font-size: clamp(0.5rem, 2vh, 5rem);
-}
-
-.sun-rise {
-  flex: 3rem;
-}
-
-.footer-container {
-  text-align: center;
 }
